Task 1 fixed elements align center

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .hrlist {
-  margin: 0 20%;
+  text-align: center;
 }
 
 .hrlist > li {
@@ -26,7 +26,7 @@ h4 {
 }
 
 .img {
-  margin: 20px 200px;
+  text-align: center;
 }
 
 .services {
